# SpectraRAG

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  PROJECT.md  README.md  SECURITY.md  STATUS.md  docker-compose.yml  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  deploy.yml  docker.yml  security.yml
data/curated_demo/: papers.txt
data/eval/: agentic-text-only.json  agentic-text-only.md  baseline-docling-classified.json  baseline-docling-mm.json  baseline-docling-mm.md  baseline-docling-text.json  baseline-docling-text.md  baseline-mmlongbench-router.json  baseline-mmlongbench-text.json  baseline-mmlongbench.json  baseline-text-only.json  baseline-text-only.md  baseline.json
data/eval/ingestion/: main.json  main.md  spike-cache.json  spike-graph.json  spike.md
data/golden/: mmlongbench-v1.yaml  mmlongbench-v2.yaml  robust-v1.yaml  v1.yaml  v2.yaml  v3.yaml
docs/: evals.md  results.md
docs/decisions/: 0001-contextual-retrieval.md  0002-phase2-multimodal-chunks.md  0003-phase22-query-expansion.md  0004-phase3-visual-retrieval.md  0005-phase4-deploy-and-observability.md  0006-ooc-refusal-gate.md  0007-phase31-corpus-expansion-and-hybrid-fusion.md  0008-phase32-routing.md  0009-region-level-evidence.md  0010-cost-quality-cascade.md  0011-figure-caption-aggregation.md  0012-reranker-swap-investigated.md  0013-routing-is-the-accuracy-lever.md  0014-api-reranker-parity.md  0015-routing-fair-eval-set.md  0016-context-neighbourhood-expansion.md  0017-corpus-clean-structure-aware-chunking.md  0018-graphrag-tier-construction.md  0019-agentic-retrieval-tier.md  0020-vlm-as-parser-ingestion-fallback.md  0021-docling-text-chunker.md  0022-figure-role-classification.md  0023-visual-favoring-fusion-weight.md  0024-route-by-fit-page-selector.md  0025-structured-extraction-augments-reading.md  0026-dci-evaluated-experimental-opt-in.md  0027-keyless-demo-chat.md
qdrant_local/: meta.json
scripts/: Publish-DemoImage.ps1  audit_ingestion_overlay.py  bootstrap_corpus.py  build_mmlongbench_golden.py  calibrate_cascade.py  calibrate_refusal.py  check_regression.py  dump_chunks.py  dump_ingestion_study.py  eval_hybrid.py  eval_ingestion.py  eval_run.py  eval_visual.py  exp_classifier_dispatch.py  experiment_vision_vs_text.py  extend_mmlongbench_golden.py  fetch_mmlongbench.py  fetch_paper_titles.py  fetch_papers.py  find_visual_wins.py  harvest_candidates.py  ingest.py  ingest_mmlb_v2.py  inspect_candidates.py  promote_candidates.py  rebaseline_offline.py  render_pages.py  rescore_mmlb_pages.py  smoke_eval.py  smoke_phase1.py  spike_vision_generator.py  web_dev_proxy.py
scripts/experiments/: __init__.py  _compare_eval.py  _openrouter_client.py  _probe_classified.py  _probe_classifier_versions.py  _probe_unlabeled.py  _probe_vlm_captions.py  _render_unlabeled.py  answer_in_text.py  apply_gold_audit.py  bench_rerank.py  bet1_decompose.py  bet2_agentic_mmlb_run.py  bet2_mmlb_gate.py  bet2_selective_gate.py  bet3_aggregation_probe.py  build_gold_audit.py  build_robust_golden.py  dci_eval.py  dci_incontext.py  dci_prepare_bright.py  dci_report.py  dense_control_misses.py  diagnose_depth50_run.py  diagnose_figure_misses.py  docling_classifier_probe.py  docling_probe.py  docling_text_probe.py  end_to_end_ceiling.py  extract_bench.py  extract_compare.py  extraction_recall.py  fair_judge.py  graphrag_spike.py  grep_recovers_misses.py  inspect_tiny_figures.py  probe_routing.py  quantify_corpus_junk.py  rebuild_mmlb_run_from_cache.py  run_doe.py  (+15 more)
scripts/legacy/: experiment_mmlb_gen.py  profile_latency.py
src/: __init__.py
src/api/: auth.py  bootstrap.py  deps.py  main.py  middleware.py  rate_limit.py
src/config/: default.yaml  settings.py
src/dci/: __init__.py  agent.py  tools.py
src/embeddings/: __init__.py  fastembed_bge.py  ollama_bge.py  protocol.py  sentence_transformers_bge.py
src/eval/: __init__.py  golden_set.py  judges.py  latency.py  metrics_generation.py  metrics_retrieval.py  report.py  runner.py  storage.py
src/extraction/: __init__.py  structured.py
src/graph/: __init__.py  build.py  summarize.py
src/ingestion/: __init__.py  captioner.py  chunking.py  clean.py  contextualize.py  docling_chunker.py  docling_parser.py  figures.py  graph_extract.py  pdf.py  pipeline.py  tables.py  visual.py
src/llm/: __init__.py  ollama_chat.py  openrouter.py  protocol.py
src/observability/: __init__.py  langfuse.py  logging.py  metrics.py  otel.py  sentry.py
src/prompts/: __init__.py  loader.py
src/rag/: bm25.py  generate.py  hybrid.py  page_budget.py  query_expansion.py  rerank.py  vectorstore.py
src/types/: __init__.py  documents.py  eval.py  generation.py  graph.py  retrieval.py
terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  secrets.tf  variables.tf
tests/: conftest.py  fakes.py
tests/unit/: test_agentic_retriever.py  test_answer_route.py  test_api.py  test_auth.py  test_bm25.py  test_caption_association.py  test_captioner.py  test_check_regression.py  test_chunking.py  test_chunking_document.py  test_chunking_multimodal.py  test_classifier_llm.py  test_clean.py  test_contextualize.py  test_dci.py  test_demo_route.py  test_docling_chunker.py  test_end_to_end.py  test_eval_hybrid.py  test_eval_report.py  test_eval_runner.py  test_eval_types.py  test_extraction_factory.py  test_fetch_papers.py  test_figure_caption_invariant.py  test_figure_caption_invariant_corpus.py  test_figure_role.py  test_figures.py  test_figures_route.py  test_generate.py  test_generate_refusal.py  test_generate_vision.py  test_golden_set_loader.py  test_graph_build.py  test_graph_extract.py  test_graph_summarize.py  test_harvest_candidates.py  test_hybrid.py  test_ingestion_pipeline.py  test_judges.py  (+42 more)
web/: app.js  chat.html  figures.html  index.html  inspection.html  papers.html  styles.css  why-multimodal.html  why-multimodal.json
web/app/: api.js  app.jsx  chat.jsx  figures.jsx  inspection.jsx  papers.jsx  shared.jsx  styles.css  styles2.css  why.jsx
(+63 files in other folders)
