[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-modal-paper-rag"
version = "0.1.0"
description = "Production-grade RAG comparing visual document retrieval (ColQwen2) against a multi-modal pipeline."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "NorthernLightx", email = "70861631+NorthernLightx@users.noreply.github.com" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
  "tenacity>=9.0",
  "structlog>=24.4",
  "pyyaml>=6.0.2",
  "openai>=1.55",
  "anthropic>=0.40",
  "ollama>=0.4",
  "qdrant-client>=1.12",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
  "langfuse>=2.55",
  "pymupdf>=1.24",
  "rank-bm25>=0.2.2",
  "sentence-transformers>=3.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "respx>=0.21",
  "ruff>=0.8",
  "mypy>=1.13",
  "types-pyyaml",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_decorators = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["rank_bm25.*", "ollama.*", "langfuse.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
  "integration: requires docker-compose services",
  "slow: long-running tests",
]
