[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-modal-paper-rag"
version = "0.1.0"
description = "Production-grade RAG comparing visual document retrieval (ColQwen2) against a multi-modal pipeline."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "NorthernLightx", email = "70861631+NorthernLightx@users.noreply.github.com" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
  "tenacity>=9.0",
  "structlog>=24.4",
  "pyyaml>=6.0.2",
  "openai>=1.55",
  "anthropic>=0.40",
  "ollama>=0.4",
  "opentelemetry-api>=1.27",
  "opentelemetry-exporter-otlp-proto-grpc>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  "opentelemetry-sdk>=1.27",
  "qdrant-client>=1.12",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
  "langfuse>=2.55",
  "pymupdf>=1.24",
  "rank-bm25>=0.2.2",
  "sentence-transformers>=3.3",
  "sentry-sdk[fastapi]>=2.18",
  "torch>=2.6",
  "torchvision>=0.21",
  "colpali-engine>=0.3.15",
  "slowapi>=0.1.9",
  "datasets>=4.8.5",
  "huggingface-hub>=1.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "respx>=0.21",
  "ruff>=0.8",
  "mypy>=1.13",
  "types-pyyaml",
]

# PyTorch wheels: cu126 on Windows for local 8 GB GPU dev (cross-encoder rerank).
# Linux (CI / cloud) keeps the default PyPI wheel (CPU-only) since the
# regression-gate / unit suite doesn't need GPU. `explicit = true` keeps this index
# off the resolver path for non-torch packages.
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
]

# Tell uv to resolve for both Windows + Linux so the lockfile has separate entries
# for each (cu126 wheels on win32; CPU wheels from PyPI on linux for CI).
[tool.uv]
environments = [
  "sys_platform == 'win32'",
  "sys_platform == 'linux'",
]
# Force peft to >=0.19.1 even though colpali-engine 0.3.15 declares peft<0.19.
# Reason: transformers 5.x's load_adapter path imports
# `_maybe_shard_state_dict_for_tp` from `peft.utils.save_and_load`, a function
# added in peft 0.19. With peft 0.18 the visual eval fails with ImportError.
# Empirically, colpali-engine still imports + runs cleanly under peft 0.19.1.
override-dependencies = [
  "peft>=0.19.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src", "scripts", "tests"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["ASYNC240"]  # CLI scripts may block in async functions; not perf-critical

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_decorators = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["rank_bm25", "rank_bm25.*", "ollama", "ollama.*", "langfuse", "langfuse.*", "fitz", "fitz.*", "sentence_transformers", "sentence_transformers.*", "PIL", "PIL.*", "colpali_engine", "colpali_engine.*", "torch", "torch.*", "torchvision", "torchvision.*", "datasets", "datasets.*", "huggingface_hub", "huggingface_hub.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["opentelemetry.instrumentation.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
  "integration: requires docker-compose services",
  "slow: long-running tests",
]
